--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Titan+One&display=swap");
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Titan One", "Arial", "sans-serif";
+}
+
+ul {
+  list-style-type: none;
+}
