--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,26 @@
   box-sizing: border-box;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
 body {
   font-family: "Roboto", "Arial", "sans-serif";
+}
+
+main {
+  flex-grow: 1;
 }
 
 ul {
