--- a/src/components/favorite-burger/FavoriteBurger.styles.css
+++ b/src/components/favorite-burger/FavoriteBurger.styles.css
@@ -5,14 +5,16 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   background-color: #f5ebdc;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .favoriteProduct:hover {
-  transform: scale(1.005);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .favoriteProduct img {
