--- a/src/components/product/Product.styles.css
+++ b/src/components/product/Product.styles.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #f9f9f9;
+  background-color: #f5ebdc;
   border: 1px solid #ddd;
   padding: 10px;
   text-align: center;
