--- a/src/components/cart-dropdown/cart-dropdown.styles.css
+++ b/src/components/cart-dropdown/cart-dropdown.styles.css
@@ -10,11 +10,13 @@
   top: 90px;
   right: 40px;
   z-index: 5;
+  border-radius: 3px;
 }
 
 .cart-dropdown-container .empty-message {
   font-size: 18px;
   margin: 50px auto;
+  color: black;
 }
 
 .cart-dropdown-container .cart-items {
@@ -32,6 +34,7 @@
   font-size: 16px;
   font-weight: bold;
   color: white;
+  border-radius: 3px;
 }
 
 .cart-dropdown-container button:hover {
@@ -47,7 +50,7 @@
     right: 10%;
     left: 10%;
     border: 1px solid black;
-    border-radius: 5px; /* Optional for better aesthetics */
+    border-radius: 5px;
   }
 }
 
