--- a/src/components/cart-icon/Cart-icon.styles.css
+++ b/src/components/cart-icon/Cart-icon.styles.css
@@ -25,6 +25,6 @@
   .cart-icon-container {
     margin-top: 20px;
     margin-bottom: 10px;
-    justify-content: center; /* Center the cart icon horizontally */
+    justify-content: center;
   }
 }
