--- a/src/components/cart-dropdown/cart-dropdown.styles.css
+++ b/src/components/cart-dropdown/cart-dropdown.styles.css
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .cart-dropdown-container button {
@@ -59,7 +60,7 @@
     width: 90%;
     height: auto;
     top: auto;
-    bottom: 100px;
+    bottom: -300px;
     right: 5%;
     left: 5%;
     border: none;
@@ -74,7 +75,7 @@
     width: 95%;
     height: auto;
     top: auto;
-    bottom: -250px;
+    bottom: -300px;
     right: 2.5%;
     left: 2.5%;
     border: none;
