--- a/src/components/paymentForm/PaymentForm.styles.css
+++ b/src/components/paymentForm/PaymentForm.styles.css
@@ -1,37 +1,44 @@
 .payment-wrapper {
-  background-color: #d9d9d9;
-  padding: 20px;
-  border-radius: 8px;
+  background-color: #f5f5f5;
+  padding: 30px;
+  border-radius: 10px;
   color: black;
   margin-bottom: 20px;
-  width: auto;
+  width: 100%;
+  max-width: 700px;
+  margin: 20px auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .form-field {
   display: block;
-  margin: 10px 0;
+  margin: 20px 0;
 }
 
 .input-label {
   display: block;
   margin-bottom: 10px;
+  font-weight: bold;
+  color: #333;
 }
 
 .error {
   color: rgb(187, 4, 4);
+  margin-top: 5px;
 }
 
 .input-text {
   width: 100%;
   padding: 10px;
-  border: none;
+  border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
+  margin-top: 5px;
 }
 
 .pay-button {
   width: auto;
-  max-width: 400px;
+  max-width: 700px;
   padding: 15px 150px;
   background-color: #4caf50;
   border: none;
@@ -42,7 +49,8 @@
   cursor: pointer;
   display: block;
   margin: 0 auto;
-  margin-bottom: 20px;
+  transition: background-color 0.3s ease;
+  margin-bottom: 30px;
 }
 
 .pay-button:hover {
@@ -51,6 +59,9 @@
 
 #delivery-title {
   margin-top: 40px;
+  font-size: 20px;
+  font-weight: bold;
+  color: #333;
 }
 
 .total-price {
@@ -59,11 +70,13 @@
   margin-top: 40px;
   text-align: center;
   margin-bottom: 40px;
+  color: #333;
 }
 
 .payment-methods {
   display: flex;
   justify-content: start;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
@@ -72,11 +85,12 @@
 }
 
 .payment-logo {
-  width: 40px;
+  width: 50px;
   height: auto;
   cursor: pointer;
   transition: transform 0.2s;
   margin-top: 10px;
+  border-radius: 5px;
 }
 
 .payment-logo.selected {
