--- a/src/pages/product-details/productDetails.styles.css
+++ b/src/pages/product-details/productDetails.styles.css
@@ -16,9 +16,13 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
-  font-size: 24px;
+  font-size: 50px;
   color: #aa1814;
   margin-bottom: 20px;
+}
+
+.product-go-back:hover {
+  opacity: 0.8;
 }
 
 .product-card {
