--- a/src/components/sign-up-form/sign-up-form.styles.css
+++ b/src/components/sign-up-form/sign-up-form.styles.css
@@ -13,24 +13,18 @@
   justify-content: center;
 }
 
-.login-btn {
-  background-color: #45a049;
+.signUp-btn {
+  background-color: #2d3689;
   color: white;
   font-size: 16px;
   font-weight: bold;
   border: none;
-  width: 100px;
+  width: 150px;
   height: 40px;
   border-radius: 6px;
 }
 
-.login-btn:hover {
+.signUp-btn:hover {
   opacity: 0.8;
   cursor: pointer;
-}
-
-@media (max-width: 768px) {
-  .sign-up-container {
-    margin-bottom: 100px;
-  }
 }
