update/mobile-version-styles

--- a/src/components/navbar/Navbar.styles.css
+++ b/src/components/navbar/Navbar.styles.css
@@ -11,6 +11,7 @@
     rgba(173, 24, 24, 1) 100%
   );
   color: white;
+  z-index: 1000;
 }
 
 #nav-wrapper {
@@ -19,6 +20,7 @@
   align-items: center;
   padding: 0 20px;
   height: 100%;
+  position: relative;
 }
 
 #logo {
@@ -89,6 +91,8 @@
     display: none;
     transition: all 0.3s ease;
     height: auto;
+    z-index: 1000;
+    overflow: auto;
   }
 
   #nav-list.open {
