--- a/src/pages/product-details/productDetails.styles.css
+++ b/src/pages/product-details/productDetails.styles.css
@@ -70,6 +70,20 @@
   font-size: 16px;
 }
 
+.product-add-to-favorite {
+  background-color: #2d3689;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.product-add-to-favorite:hover {
+  background-color: #212866;
+}
+
 .product-add-to-cart:hover {
   background-color: #4d873d;
 }
